Workflow upload artifact

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -20,3 +20,9 @@ jobs:
       run: sudo apt-get install protobuf-compiler
     - name: Build
       run: cargo build --bin server --release --verbose
+    - name: Zip
+      run: zip -j server.zip target/release/server
+    - name: Upload
+      uses: actions/upload-artifact@v2
+      with:
+        name: server
