--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -23,6 +23,6 @@ jobs:
     - name: Upload
       uses: actions/upload-artifact@v4
       with:
-        name: server
+        name: server-linux
         path: target/release/server
         compression-level: 9
