--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -2,27 +2,35 @@ name: Rust
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 env:
   CARGO_TERM_COLOR: always
 
 jobs:
   build:
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
 
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
 
     steps:
     - uses: actions/checkout@v4
+
+    # Install protoc if needed
     - name: Install protoc
+      if: matrix.os == 'ubuntu-latest'
       run: sudo apt-get install protobuf-compiler
+
     - name: Build
       run: cargo build --bin server --release
+
     - name: Upload
       uses: actions/upload-artifact@v4
       with:
-        name: server-linux
+        name: server-${{ matrix.os }}
         path: target/release/server
         compression-level: 9
