--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -20,16 +20,10 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    # Install protoc if needed
-    - name: Install protoc Linux
-      if: matrix.os == 'ubuntu-latest'
-      run: sudo apt-get install protobuf-compiler
-    - name: Install protoc MacOS
-      if: matrix.os == 'macos-latest'
-      run: brew install protobuf
-    - name: Install protoc Windows
-      if: matrix.os == 'windows-latest'
-      run: winget install --id Google.Protobuf --source winget
+    # Install protoc for gRPC
+    - name: Install protoc 
+      uses: arduino/setup-protoc@v3
+
 
     - name: Build
       run: cargo build --bin server --release
